--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta charset="utf-8">
     <style>
-      html, body { margin: 0 }
+      html, body {
+        margin: 0;
+      }
+
+      * {
+        box-sizing: border-box;
+      }
     </style>
   </head>
   <body>
