New build with service worker

--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
 
       * {
         box-sizing: border-box;
-      }</style></head><body><div id="container"></div><script src="common_f2ab22fb5ef44bc76593.js"></script><script src="vendor_f2ab22fb5ef44bc76593.js"></script><script src="bundle_f2ab22fb5ef44bc76593.js"></script></body></html>
+      }</style></head><body><div id="container"></div><script src="sw_59a6800493f069a8f579.js"></script><script src="vendor_c0e81aa14c6b4dc0899a.js"></script><script src="bundle_c106fa32c473e19d9ed4.js"></script></body></html>
