New build, trying to fix weird GitHub issue

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html><html lang="ar" dir="auto"><head><title>CaseWizard</title><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><meta charset="utf-8"><style>html, body {
+<!DOCTYPE html><html lang="ar" dir="auto"><head><title>WebCephalo</title><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><meta charset="utf-8"><style>html, body {
         margin: 0;
       }
 
       * {
         box-sizing: border-box;
-      }</style></head><body><div id="container"></div><script src="sw-toolbox_1126dedf09f7079b6f88.js"></script><script src="vendor_c0e81aa14c6b4dc0899a.js"></script><script src="bundle_c106fa32c473e19d9ed4.js"></script></body></html>
+      }</style></head><body><div id="container"></div><script src="sw-toolbox_7306ab18401482cf1c0d.js"></script><script src="lib_6509ccd89824b4787710.js"></script><script src="bundle_392695fd0e7cb06141eb.js"></script></body></html>
