New build with fixed layout

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html><html lang="ar" dir="auto"><head><title>WebCephalo</title><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><meta charset="utf-8"><style>html, body {
+<!DOCTYPE html><html lang="ar" dir="auto"><head><title>WebCeph</title><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><meta charset="utf-8"><style>html, body {
         margin: 0;
       }
 
       * {
         box-sizing: border-box;
-      }</style></head><body><div id="container"></div><script src="sw-toolbox_7306ab18401482cf1c0d.js"></script><script src="lib_6509ccd89824b4787710.js"></script><script src="bundle_54c45456d647ca21a3e8.js"></script></body></html>
+      }</style></head><body><div id="container"></div><script src="sw-toolbox_7306ab18401482cf1c0d.js"></script><script src="lib_6509ccd89824b4787710.js"></script><script src="bundle_73678ba1e71409ea081a.js"></script></body></html>
