Start rewriting UI with multiple tabs

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="auto">
   <head>
     <title>WebCeph</title>
-    <link rel="manifest" href="./manifest.webmanifest">
+    <link rel="manifest" href="./manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta charset="utf-8">
     <style>
