Dynamically update page direction based on locale

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" dir="auto">
+<html lang="en-US" dir="auto">
   <head>
     <title>WebCeph</title>
     <link rel="manifest" href="./manifest.json">
