--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html lang="ar" dir="auto">
-  <head>
-    <title>WebCeph</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta charset="utf-8">
-    <style>
-      html, body {
-        margin: 0;
-      }
+<html lang="en" dir="auto">
 
-      * {
-        box-sizing: border-box;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="container">
-      
-    </div>
-  </body>
+<head>
+  <title>WebCeph</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta charset="utf-8">
+  <style>
+    html,
+    body {
+      margin: 0;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="container">
+
+  </div>
+</body>
+
 </html>
