Fix layout broken in recent versions of Chrome

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,17 @@
 <html lang="ar" dir="auto">
   <head>
     <title>WebCeph</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta charset="utf-8">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
+    <meta charset="utf-8" />
     <style>
-      html, body {
+      html,
+      body {
         margin: 0;
+        height: 100vh;
+        max-height: 100vh;
       }
 
       * {
@@ -15,8 +21,6 @@
     </style>
   </head>
   <body>
-    <div id="container">
-      
-    </div>
+    <div id="container"></div>
   </body>
 </html>
