--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<!DOCTYPE html><html lang="ar" dir="auto"><head><title>WebCeph</title><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><meta charset="utf-8"><style>html, body {
+<!DOCTYPE html><html lang="ar" dir="auto"><head><title>WebCeph</title><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><meta charset="utf-8"><style>html,
+      body {
         margin: 0;
+        height: 100vh;
+        max-height: 100vh;
       }
 
       * {
         box-sizing: border-box;
-      }</style></head><body><div id="container"></div><script src="common_a24b9d4559f4e47892df.js"></script><script src="lib_d08595d5f4b4698ea3fb.js"></script><script src="bundle_5dd8f506941dee168626.js"></script></body></html>
+      }</style></head><body><div id="container"></div><script src="common_2a90d0a98ea30993f18d.js"></script><script src="lib_a7400b7bc38f682b10c4.js"></script><script src="bundle_14cbc54069f6ea5dcead.js"></script></body></html>
