--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="ar" dir="auto"><head><title>WebCeph</title><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><meta charset="utf-8"><style>html,
+<!DOCTYPE html><html lang="ar" dir="auto"><head><title>WebCeph</title><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><meta http-equiv="origin-trial" content="AlDvjbIMyNyNutvABpwfE+7C/4Fo9+e1nhZxUUQIhLTtKO7mYxWY0liroMSaOcp+FTAvjtPguPKQff2cbEANgwYAAABneyJvcmlnaW4iOiJodHRwczovL2ZvcmFiaS5uZXQ6NDQzIiwiZmVhdHVyZSI6Ik5hdGl2ZUZpbGVTeXN0ZW0iLCJleHBpcnkiOjE1NzU0MDY4MDEsImlzU3ViZG9tYWluIjp0cnVlfQ=="><meta charset="utf-8"><style>html,
       body {
         margin: 0;
         height: 100vh;
@@ -7,4 +7,4 @@
 
       * {
         box-sizing: border-box;
-      }</style></head><body><div id="container"></div><script src="common_4bcca97de1fc193f3948.js"></script><script src="lib_7956670d088aa25bc71f.js"></script><script src="bundle_b76d4c370836fbd492b5.js"></script></body></html>
+      }</style></head><body><div id="container"></div><script src="common_85cccd5ac884a9cc1c33.js"></script><script src="lib_7956670d088aa25bc71f.js"></script><script src="bundle_937f590b10bc68b29184.js"></script></body></html>
